--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
-server.port=8884
-spring.datasource.url=jdbc:h2:mem:patients-db
+server.port=8084
 spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:patients-db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.path=/h2-console
