--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8084
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:patients-db
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
+spring.datasource.url=jdbc:mysql://localhost:3306/hopital?createDatabaseIfNotExist=true
+spring.datasource.username=root
 spring.datasource.password=
-spring.h2.console.path=/h2-console
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
