--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 server.port=8084
-spring.h2.console.enabled=true
+#spring.h2.console.enabled=true
 spring.datasource.url=jdbc:mysql://localhost:3306/hopital?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
